bluec-tests/tests/invalid/typedef/redeclare_different.c
int main(void) {
    typedef int foo;
    typedef float foo;
    foo x = 5;
    return x;
}
